# api-rs

./: .example.env  .gitignore  Cargo.toml  Containerfile  README.md  compose.yaml
docs/: biome.json  openapi.ts  package-lock.json  package.json
src/: error.rs  logging.rs  main.rs  middleware.rs  route.rs
src/controller/: docs.rs  meta.rs
src/middleware/: request_id.rs  tracing.rs
src/route/: docs.rs  meta.rs
src/service/: health.rs
