[package]
name = "api"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0.0", features = ["backtrace"] }
axum = { version = "0.7.0", default-features = false, features = ["http1", "http2", "json", "tokio"] }
dotenvy = { version = "0.15.0" }
serde_json = { version = "1.0.0" }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.0" }
tracing = { version = "0.1.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
