[package]
name = "api"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "tokio"] }
axum-extra = { version = "0.12" }
dotenvy = { version = "0.15" }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
